--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Vite Vue Crx",
+  "name": "__MSG_extName__",
+  "description": "__MSG_extDescription__",
+  "default_locale": "en",
   "version": "0.0.0",
   "icons": {
     "16": "src/icons/128x128.png",
